--- a/index.html
+++ b/index.html
@@ -38,12 +38,23 @@
         <h2>Summary</h2>
       </div>
       <div class="card-summary__stats">
-        <div class="card-summary__stats--reaction">
-          <img src="/assets/images/icon-reaction.svg" alt="Reaction"> 
-          <span class="card-summary__stats--reaction-text">Reaction</span>
-          <span class="card-summary__stats--reaction-numbertwo"> <span class="card-summary__stats--reaction-number">80</span> / 100</span>
+        <div class="card-summary__stats--reaction bg-reaction"> 
+          <div class="card-summary__stats--reaction-holder">
+            <img src="/assets/images/icon-reaction.svg" alt="Reaction"> 
+            <span class="card-summary__stats--reaction-text">Reaction</span>
+          </div>
+          <span class="card-summary__stats--reaction-total-score">
+          <span class="card-summary__stats--reaction-score">80</span> / 100</span>
         </div>
-    
+        <!-- MEMORY -->
+        <div class="card-summary__stats--memory bg-memory"> 
+          <div class="card-summary__stats--memory-holder">
+            <img src="assets/images/icon-memory.svg" alt="Memory"> 
+            <span class="card-summary__stats--memory-text">Memory</span>
+          </div>
+          <span class="card-summary__stats--memory-total-score">
+          <span class="card-summary__stats--memory-score">80</span> / 100</span>
+        </div>
       Memory
       92 / 100
     
