--- a/index.html
+++ b/index.html
@@ -39,30 +39,40 @@
       </div>
       <div class="card-summary__stats">
         <div class="card-summary__stats--reaction bg-reaction"> 
-          <div class="card-summary__stats--reaction-holder">
-            <img src="/assets/images/icon-reaction.svg" alt="Reaction"> 
+          <div class="card-summary__stats--reaction-holder flex">
+            <img class="margin-r-1" src="/assets/images/icon-reaction.svg" alt="Reaction"> 
             <span class="card-summary__stats--reaction-text">Reaction</span>
           </div>
-          <span class="card-summary__stats--reaction-total-score">
-          <span class="card-summary__stats--reaction-score">80</span> / 100</span>
+          <span class="card-summary__stats--reaction-total-score color-gray">
+          <span class="card-summary__stats--reaction-score color-dg">80</span> / 100</span>
         </div>
         <!-- MEMORY -->
         <div class="card-summary__stats--memory bg-memory"> 
-          <div class="card-summary__stats--memory-holder">
-            <img src="assets/images/icon-memory.svg" alt="Memory"> 
+          <div class="card-summary__stats--memory-holder flex">
+            <img class="margin-r-1" src="assets/images/icon-memory.svg" alt="Memory"> 
             <span class="card-summary__stats--memory-text">Memory</span>
           </div>
-          <span class="card-summary__stats--memory-total-score">
-          <span class="card-summary__stats--memory-score">80</span> / 100</span>
+          <span class="card-summary__stats--memory-total-score color-gray">
+          <span class="card-summary__stats--memory-score color-dg">92</span> / 100</span>
         </div>
-      Memory
-      92 / 100
-    
-      Verbal
-      61 / 100
-    
-      Visual
-      72 / 100
+        <!-- VERBAL -->
+        <div class="card-summary__stats--verbal bg-verbal"> 
+          <div class="card-summary__stats--verbal-holder flex">
+            <img class="margin-r-1" src="assets/images/icon-verbal.svg" alt="Verbal"> 
+            <span class="card-summary__stats--verbal-text">Verbal</span>
+          </div>
+          <span class="card-summary__stats--verbal-total-score color-gray">
+          <span class="card-summary__stats--verbal-score color-dg">61</span> / 100</span>
+        </div>
+        <!-- VISUAL -->
+        <div class="card-summary__stats--visual bg-visual"> 
+          <div class="card-summary__stats--visual-holder flex">
+            <img class="margin-r-1" src="assets/images/icon-visual.svg" alt="VISUAL"> 
+            <span class="card-summary__stats--visual-text">Visual</span>
+          </div>
+          <span class="card-summary__stats--visual-total-score color-gray">
+          <span class="card-summary__stats--visual-score color-dg">72</span> / 100</span>
+        </div>
       </div>
       <div>
         <button>Continue</button>
