--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <title>Frontend Mentor | Results summary component</title>
 
 </head>
-<body>
+<body class="card-center">
   <main class="container card">
     <div class="card-result">
       <div class="card-result__title"> 
@@ -74,14 +74,10 @@
           <span class="card-summary__stats--visual-score color-dg">72</span> / 100</span>
         </div>
       </div>
-      <div>
+      <div class="card-summary__btn">
         <button>Continue</button>
       </div>
     </div>
   </main>  
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
 </body>
 </html>
