--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   
+  <!-- NORMALIZE -->
+  <link rel="preload" href="css/normalize.css" as="style">
+  <link rel="stylesheet" href="css/normalize.css">
   <!-- STYLES -->
   <link rel="preload" href="css/styles.css" as="style">
   <link rel="stylesheet" href="css/styles.css">
@@ -20,19 +23,21 @@
 </head>
 <body class="card-center">
   <main class="container card">
+    <!-- RESULT -->
     <div class="card-result">
       <div class="card-result__title"> 
-        <p>Your Result</p>
+        <h3>Your Result</h3>
       </div>
       <div class="card-result__rating">
           <span>76</span> 
-          <p class="no-margin">of 100</p>
+          <p>of 100</p>
       </div>
       <div class="card-result__paragrahp">
         <h2>Great</h2>
         <p>You scored higher than 65% of the people who have taken these tests.</p>
       </div>
     </div>
+    <!-- SUMMARY -->
     <div class="card-summary">
       <div class="card-summary__title">
         <h2>Summary</h2>
